<resources>
    <string name="app_name">geha</string>
    <string name="avatar_of_user">Avatar image of %s</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="sharing_failed">Failed to initiate sharing chooser</string>
    <string name="share_text">Check out this GitHub profile %s</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="status_initial">Start finding GitHub accounts by entering query on the search bar</string>
    <string name="status_loading">Fetching data, please wait</string>
    <string name="status_error">Request failed, please check network connection</string>
    <string name="status_empty">No result were found</string>
    <string name="saved_profile">Saved profile</string>
    <string name="toggle_theme">Toggle theme mode</string>
    <string name="delete">Delete</string>
    <string name="saved_list_changed">Saved list changed</string>
    <string name="see_result">See result</string>
</resources>
