<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profile"
            type="im.syf.geha.ui.profile.UserProfile" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/avatar_image_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@{@string/avatar_of_user(profile.name)}"
                    android:src="@{context.getDrawable(profile.avatar)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/repository_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{profile.repository}"
                    app:layout_constraintBottom_toTopOf="@id/repository_label"
                    app:layout_constraintEnd_toEndOf="@id/repository_label"
                    app:layout_constraintStart_toStartOf="@id/repository_label"
                    app:layout_constraintTop_toTopOf="@id/avatar_image_view"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="62" />

                <TextView
                    android:id="@+id/repository_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/repository"
                    app:layout_constraintBottom_toBottomOf="@id/avatar_image_view"
                    app:layout_constraintEnd_toStartOf="@id/following_label"
                    app:layout_constraintStart_toEndOf="@id/avatar_image_view"
                    app:layout_constraintTop_toBottomOf="@id/repository_text_view" />

                <TextView
                    android:id="@+id/following_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{profile.following}"
                    app:layout_constraintEnd_toEndOf="@id/following_label"
                    app:layout_constraintStart_toStartOf="@id/following_label"
                    app:layout_constraintTop_toTopOf="@id/repository_text_view"
                    tools:text="11" />

                <TextView
                    android:id="@+id/following_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    app:layout_constraintEnd_toStartOf="@id/followers_label"
                    app:layout_constraintStart_toEndOf="@id/repository_label"
                    app:layout_constraintTop_toTopOf="@id/repository_label" />

                <TextView
                    android:id="@+id/followers_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{profile.followers}"
                    app:layout_constraintEnd_toEndOf="@id/followers_label"
                    app:layout_constraintStart_toStartOf="@id/followers_label"
                    app:layout_constraintTop_toTopOf="@id/repository_text_view"
                    tools:text="22.4K" />

                <TextView
                    android:id="@+id/followers_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/following_label"
                    app:layout_constraintTop_toTopOf="@id/repository_label" />

                <Button
                    android:id="@+id/save_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:icon="@drawable/ic_save"
                    app:iconSize="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/avatar_image_view"
                    app:layout_constraintEnd_toStartOf="@id/share_button"
                    app:layout_constraintStart_toStartOf="@id/repository_label" />

                <Button
                    android:id="@+id/share_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    app:icon="@drawable/ic_share"
                    app:iconSize="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/save_button"
                    app:layout_constraintEnd_toEndOf="@id/followers_label"
                    app:layout_constraintStart_toEndOf="@id/save_button" />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"
                    android:text="@{profile.name}"
                    app:layout_constraintStart_toStartOf="@id/avatar_image_view"
                    app:layout_constraintTop_toBottomOf="@id/avatar_image_view"
                    tools:text="@tools:sample/full_names" />

                <ImageView
                    android:id="@+id/company_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_building"
                    app:layout_constraintBottom_toBottomOf="@id/company_text_view"
                    app:layout_constraintStart_toStartOf="@id/name_text_view"
                    app:layout_constraintTop_toTopOf="@id/company_text_view" />

                <TextView
                    android:id="@+id/company_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{profile.company}"
                    app:layout_constraintStart_toEndOf="@id/company_icon"
                    app:layout_constraintTop_toBottomOf="@id/name_text_view"
                    tools:text="@tools:sample/lorem" />

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_location_outline"
                    app:layout_constraintBottom_toBottomOf="@id/location_text_view"
                    app:layout_constraintStart_toStartOf="@id/name_text_view"
                    app:layout_constraintTop_toTopOf="@id/location_text_view" />

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@{profile.location}"
                    app:layout_constraintStart_toEndOf="@id/location_icon"
                    app:layout_constraintTop_toBottomOf="@id/company_text_view"
                    tools:text="@tools:sample/cities" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
